--- a/src/app/main-page/header/header.component.html
+++ b/src/app/main-page/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<mat-toolbar>
+  <span>Untitled Webshop</span>
+  <span class="spacer"></span>
+  <form class="form">
+    <mat-form-field class="full-width" appearance="fill">
+      <input matInput placeholder="Enter search phrase" value="" />
+    </mat-form-field>
+  </form>
+  <span class="spacer"></span>
+  <button mat-icon-button class="icon" aria-label="icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+</mat-toolbar>
